Allow WordAltermatives in PhraseSegments